# fast-engine

./: ECOSYSTEM_DOCTRINE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup-fast-engine.sh
.github/workflows/: ci.yml
fast_engine/: __init__.py  app.py  cli.py  config.py  core.py  deploy.py  legacy.py  templates.py  utils.py
fast_engine/templates/saas-basic/: template.yml
fast_engine/templates/saas-basic/backend/: app.py.j2
fast_engine/templates/saas-basic/devops/: Dockerfile.j2
templates/saas-basic/: template.yml
templates/saas-basic/frontend/: index.html.j2
tests/: __init__.py  conftest.py  test_cli.py  test_fast_engine.py  test_templates.py
