[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-engine"
version = "1.0.0"
description = "Fast Full-Stack Project Generator using LLM APIs + Templates"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Fast-Engine Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.8.0",
    "jinja2>=3.1.0", 
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
fast-engine = "fast_engine.cli:app"

[project.urls]
Homepage = "https://github.com/fast-engine/fast-engine"
Documentation = "https://github.com/fast-engine/fast-engine/blob/main/README.md"
Repository = "https://github.com/fast-engine/fast-engine"

# Configuración para setuptools - ESTA ES LA PARTE IMPORTANTE
[tool.setuptools.packages.find]
where = ["."]
include = ["fast_engine*"]
exclude = ["templates*", "tests*", "docs*", "examples*"]

# Incluir archivos de templates como data files
[tool.setuptools.package-data]
fast_engine = ["templates/**/*"]